Fix dark mode overlay

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -910,3 +910,13 @@ body[bp-layout=horizontal-overlap] .navbar-filters .navbar-nav .nav-link {
 [data-bs-theme=dark] .tox button.tox-tbtn--enabled {
     background: var(--tblr-tabler) !important;
 }
+
+[data-bs-theme=dark] #cboxOverlay {
+	background: transparent !important;
+	-webkit-backdrop-filter: blur(4px) !important;
+	backdrop-filter: blur(4px) !important;
+}
+
+[data-bs-theme=dark] #colorbox {
+    background: transparent !important;
+}
